--- a/scss/core/helpers/_viewport.scss
+++ b/scss/core/helpers/_viewport.scss
@@ -1,62 +1,69 @@
 @use '~@place/core/config/viewports' as viewports;
+@use '~@place/core/mixins/placeholders' as placeholder-mixins;
+
+// Generate viewport-specific placeholders at top level (with media query inside)
+// so that @extend works without crossing media query boundaries
+@each $identifier, $query in viewports.$viewport-list {
+    @media #{$query} {
+        @include placeholder-mixins.presentation-placeholders($identifier);
+    }
+}
 
 @each $suffix, $breakpoint in viewports.$helper-breakpoints {
-    @media #{$breakpoint} {
-        // Display
-        .display-block-#{$suffix} {
-            @extend %display-block-#{$suffix} !optional;
-        }
+    // Display
+    .display-block-#{$suffix} {
+        @extend %display-block-#{$suffix} !optional;
+    }
 
-        .inline-block-#{$suffix} {
-            @extend %inline-block-#{$suffix} !optional;
-        }
+    .inline-block-#{$suffix} {
+        @extend %inline-block-#{$suffix} !optional;
+    }
 
-        // Hides
-        .is-hidden-#{$suffix} {
-            @extend %is-hidden-#{$suffix} !optional;
-        }
+    // Hides
+    .is-hidden-#{$suffix} {
+        @extend %is-hidden-#{$suffix} !optional;
+    }
 
-        // Floats
-        .float-start-#{$suffix} {
-            @extend %float-start-#{$suffix} !optional;
-        }
+    // Floats
+    .float-start-#{$suffix} {
+        @extend %float-start-#{$suffix} !optional;
+    }
 
-        .float-center-#{$suffix} {
-            @extend %float-center-#{$suffix} !optional;
-        }
+    .float-center-#{$suffix} {
+        @extend %float-center-#{$suffix} !optional;
+    }
 
-        .float-end-#{$suffix} {
-            @extend %float-end-#{$suffix} !optional;
-        }
+    .float-end-#{$suffix} {
+        @extend %float-end-#{$suffix} !optional;
+    }
 
-        // Display
-        .flex-display-#{$suffix} {
-            @extend %flex-display-#{$suffix} !optional;
-        }
+    // Flex display
+    .flex-display-#{$suffix} {
+        @extend %flex-display-#{$suffix} !optional;
+    }
 
-        .flex-grow-#{$suffix} {
-            @extend %flex-grow-#{$suffix} !optional;
-        }
+    .flex-grow-#{$suffix} {
+        @extend %flex-grow-#{$suffix} !optional;
+    }
 
-        // Justification
-        .justify-start-#{$suffix} {
-            @extend %justify-start-#{$suffix} !optional;
-        }
+    // Justification
+    .justify-start-#{$suffix} {
+        @extend %justify-start-#{$suffix} !optional;
+    }
 
-        .justify-end-#{$suffix} {
-            @extend %justify-end-#{$suffix} !optional;
-        }
+    .justify-end-#{$suffix} {
+        @extend %justify-end-#{$suffix} !optional;
+    }
 
-        .justify-center-#{$suffix} {
-            @extend %justify-center-#{$suffix} !optional;
-        }
+    .justify-center-#{$suffix} {
+        @extend %justify-center-#{$suffix} !optional;
+    }
 
-        .justify-space-around-#{$suffix} {
-            @extend %justify-space-around-#{$suffix} !optional;
-        }
+    .justify-space-around-#{$suffix} {
+        @extend %justify-space-around-#{$suffix} !optional;
+    }
 
-        .justify-space-between-#{$suffix} {
-            @extend %justify-space-between-#{$suffix} !optional;
-        }
+    .justify-space-between-#{$suffix} {
+        @extend %justify-space-between-#{$suffix} !optional;
     }
 }
